# Macaulay2-Jupyter-Kernel

./: CHANGELOG.md  MANIFEST.in  README.md  generate-symbols.m2  pyproject.toml
.github/workflows/: test.yml
demo/: demo.ipynb  m2book.ipynb  test.ipynb
docker/: Dockerfile  Makefile
m2_kernel/: __init__.py  __main__.py  install.py  kernel.py  lsp_spec.py  mode_magic.py  symbols.py  symbols.py.in
m2_kernel/assets/m2-code/: JupyterKernel.m2  init.m2
m2_kernel/magics/: mode_magic.py
tests/: test_kernel.py
